# signal-scout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-and-push.yml  tests.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  defaults_app.py  main.py  services.py
backend/app/api/: auth_routes.py  routes.py  schemas.py
backend/app/engine/: defaults.py  engine.py  layers.py  manual.py  utils.py
backend/app/ingestion/: sources.py
backend/app/llm/: client.py  prompt.py
backend/app/storage/: database.py
backend/tests/: conftest.py  test_api.py  test_engine_parity.py  test_ingestion.py  test_llm.py
backend/tests/parity/: gen_golden.mjs  golden.json  reference_config.py  reference_engine.mjs
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Dashboard.module.css  Dashboard.tsx  Login.tsx
frontend/components/tabs/: EngineTab.tsx  FrameworksTab.tsx  IngestionTab.tsx  LensTab.tsx  OutputStudioTab.tsx  ScoreSignalTab.tsx  SignalQueueTab.tsx  StudioConfigTab.tsx
frontend/lib/: api.ts  types.ts
frontend/styles/: globals.css
scripts/: dev.sh
